<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">forMMulary</string>
    <string name="action_settings">Settings</string>
    <string name="titleCombinedSearch">Combined Search</string>
    <string name="titleAnatomicalTarget">Anatomical Target</string>
	<string name="go">Search</string>
	<string name="urlAtcVet">http://www.whocc.no/atcvet/atcvet_index/</string>
	<string name="Enter_Therapeutic_Class">Enter a Therapeutic Class</string>
	<string name="headerBriefDescription">Brief Description</string>
	<string name="headerGenericDrug">Avalaible as generic drug</string>
	<string name="headerLicense">License for vet use</string>
	<string name="headerActionAnatomical">Action (Anatomical Target)</string>
	<string name="headerActionTherapeutic">Action (Therapeutic Target)</string>
	<string name="headerATCvetCodes">ATCvet Codes</string>
	<string name="headerAnimals">Animals</string>
	<string name="ok">OK</string>
	<string name="display">500</string>
	<string name="pinnipeds">(Pinnipeds)</string>
	<string name="footer">FooterApp</string>
	<string name="genericDrug">Generic Drug</string>
	<string name="logo_food_drug">Food And Drug</string>
	<string name="logo_aemps">Agencia Española de Medicamentos y Productos Sanitarios</string>
	<string name="logo_ema">European Medicines Agency</string>
	<string name="Nd">Nd</string>
	<string name="weight_lbs">Body Weight (in Lbs)</string>
	<string name="hint_weight_lbs">Press to enter weight (Lbs)</string>
	<string name="weight_kgs">Body Weight (in Kgs)</string>
	<string name="hint_weight_kgs">Press to enter weight (Kgs)</string>
	<string name="dose">Dose (per Kg)</string>
	<string name="hint_dose_2lines">Press to enter\ndose</string>
	<string name="hint_dose">Press to enter dose</string>
	<string name="concentration">Concentration</string>
	<string name="hint_concentration_2lines">Press to enter\nconcentration</string>
	<string name="hint_concentration">Press to enter concentration</string>
	<string name="calculate"> Calculate</string>
	<string name="calculator"> Calculator</string>
	<string name="report"> Report Experience</string>
	<string name="sync">Syncronize</string>
	
</resources>
