<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <ImageView
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="80dp" 
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/footer"
            android:src="@drawable/footerapp"
            android:scaleType="fitXY"
            />

<ScrollView
    
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
 	android:fillViewport="true" 
 	android:layout_above="@+id/footer" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/CombinedSearch"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/titleCombinedSearch"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingLeft="25dp"
        android:paddingRight="35dp" >
        
	    <AutoCompleteTextView
		      android:id="@+id/autoCompleteTextView1"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:gravity="center">
		      <requestFocus />
	   	</AutoCompleteTextView>
	  </LinearLayout>
        
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <Spinner
            android:id="@+id/SpinAnatomicalTarget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <Spinner
            android:id="@+id/SpinAnimals"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    
    <LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:gravity="center"
			    android:layout_marginTop="40dp"
			     >
					<Button
				        android:id="@+id/goButton"
				        android:layout_width="100dp"
		   	    	    android:layout_height="wrap_content"  
				        android:textSize="15sp"
			    	    android:text="@string/go"/>
    		</LinearLayout>
</LinearLayout>
</ScrollView>
</RelativeLayout>